cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)


add_executable(vector EX/vector.cpp)
add_executable(practice12-1 week12/practice12-1.cpp)
add_executable(practice12-2 week12/practice12-2.cpp)
add_executable(practice12-4 week12/practice12-4.cpp)
add_executable(practice12-3 week12/practice12-3.cpp)
add_executable(pointer EX/pointer.cpp)
add_executable(binarySearchTree EX/binarySearchTree.cpp)
add_executable(practice13-1 week13/practice13-1.cpp)