cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)


add_executable(vector EX/vector.cpp)
add_executable(practice12-1 week12/practice12-1.cpp)
add_executable(practice12-2 week12/practice12-2.cpp)
add_executable(practice12-4 week12/practice12-4.cpp)
add_executable(practice12-3 week12/practice12-3.cpp)
add_executable(pointer EX/pointer.cpp)
add_executable(binarySearchTree EX/binarySearchTree.cpp)
add_executable(practice13-1 week13/practice13-1.cpp)
add_executable(practice13-4 week13/practice13-4.cpp)
add_executable(heap EX/heap.cpp)
add_executable(practice13-2 week13/practice13-2.cpp)
add_executable(practice13-3 week13/practice13-3.cpp)
add_executable(practice14-1 week14/practice14-1.cpp)
add_executable(practice14-2 week14/practice14-2.cpp)
add_executable(practice14-4 week14/practice14-4.cpp)
add_executable(practice14-3 week14/practice14-3.cpp)
add_executable(practice15-1 week15/practice15-1.cpp)
add_executable(practice15-2 week15/practice15-2.cpp)
add_executable(practice15-4 week15/practice15-4.cpp)